implement angelos, sparta, athens status in backend directly
